--- a/sandellsandberg/css/style.css
+++ b/sandellsandberg/css/style.css
@@ -260,6 +260,29 @@ a,button,.vc_tta-icon,div.more>span{cursor: pointer;}
   #kontakt button:hover{background: #dbdbdb; color:#000;}
 
   #kontakt .desc{padding-top: 20px; padding-bottom: 50px;}
+  /*#kontakt .desc:first-child{float: left;}
+  #kontakt .desc:last-child{float: left;}*/
   #kontakt h4, #kontakt h5{font-size: 18px; margin-bottom: 14px;}
-  #kontakt .txt{float: left;}
+  #kontakt .txt{width: 100%;}
   #kontakt .map{width: 50%; padding: 20px 74px 50px 10px;}
+
+  .map{ height: 330px; background-color: #00F;}
+
+
+
+
+  /*footer*/
+  .footer{
+    background: #000;
+    padding-top: 70px;
+    color: #FFF;
+  }
+  .footer .row{
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .footer .row div{
+    font-size: 12px;
+    margin: 15px 0;
+  }
+  .foot-logo{}
