--- a/sandellsandberg/css/style.css
+++ b/sandellsandberg/css/style.css
@@ -6,13 +6,6 @@
 body{
   color: #565656;
 }
-.fix{
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-}
 .row {
     width: 1200px;
     max-width: 100%;
@@ -67,31 +60,53 @@ a,button,.vc_tta-icon,div.more>span,i{cursor: pointer;}
 
   /*gnb*/
   .gnb{
-    width: 100%;
-    background-color: #fced23;
-    padding: 20px;
+    /*width: 100%;*/
+    background: #fced23;
     z-index: 999;
+    padding: 20px;
   }
-  .gnb > a{
-    margin-top: 10px;
+  .gnb_panel{
+    height: 76px;
     margin-left: 68px;
-    /*height: 63px;*/
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
   }
-
+  .fix{
+    height: 58px;
+    padding: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(252,237,35,0.9);
+    -webkit-transition: -webkit-transform .3s ease, background .3s ease;
+    transition: -webkit-transform .3s ease, transform .3s ease, background .3s ease;
+  }
+  .fix .gnb_panel > a img{width: 220px;}
+  .gnb_panel > a{
+    display: block;
+    float: left;
+    height: 63px;
+  }
   /*gnb_list*/
   .gnb ul{
     float: right;
     width: 600px;
+    padding: 0 18px;
     font-size: 18px;
     font-weight: bold;
+    display: inline-block;
   }
   .gnb li{
     float: left;
-    height: 86px;
-    line-height: 66px;
-    margin-left: 20px;
+    line-height: 63px;
     font-size: 18px;
-    overflow: hidden;
+  }
+  .gnb li a{
+    padding: 0 20px;
+    display: block;
   }
 
 
@@ -99,7 +114,7 @@ a,button,.vc_tta-icon,div.more>span,i{cursor: pointer;}
 
   /*fadebanner*/
   .fadebanner{
-    width: 100%;
+    /*width: 100%;*/
     /*height: 600px;*/
     position: relative;
   }
