--- a/dean/css/contact.css
+++ b/dean/css/contact.css
@@ -1,4 +1,6 @@
-
+  #container{
+    background-color: ;
+  }
   html{
     background: url(../img/contact_bg.jpg);
   }
@@ -7,7 +9,7 @@
 
   /* contact */
   #contact{
-    width: 1290px;
+    /*width: 1280px;*/
     margin: 0 auto;
     padding: 250px 15px 0 15px;
   }
@@ -18,7 +20,7 @@
     height: 60px;
   }
   input[type="text"]{
-    width: 630px;
+    width: 610px;
     box-sizing: border-box;
     float: left;
     padding: 17px 20px;
