--- a/dean/css/common.css
+++ b/dean/css/common.css
@@ -158,9 +158,9 @@
     font-size: 10px;
     display: inline-block;
 
-    position: absolute;
+    position: relative;
     top: -18px;
-    left: 472px;
+    left:  -7.6%;;
 
     height: 16px;
     padding: 1px 7px 0;
