--- a/dean/css/style.css
+++ b/dean/css/style.css
@@ -5,8 +5,14 @@
     background-size: cover;
     background-position: center top;
     width: 100%;
-    height: 638px;
+    height: 950px;
+    /*height: 638px;*/
+    text-align: center;
   }
+  /*header img{
+    width: 100%;
+    height: 638px;
+  }*/
 
 /******************************************************************************/
 
