--- a/sandellsandberg/css/style.css
+++ b/sandellsandberg/css/style.css
@@ -114,9 +114,9 @@ a,button,.vc_tta-icon,div.more>span,i{cursor: pointer;}
 
   /*fadebanner*/
   .fadebanner{
-    /*width: 100%;*/
-    /*height: 600px;*/
-    position: relative;
+    /*width: 100%;
+    height: 600px;
+    position: relative;*/
   }
   .fadebanner ul{
     width: 100%;
@@ -134,6 +134,7 @@ a,button,.vc_tta-icon,div.more>span,i{cursor: pointer;}
     left: 0;
     top: 0;
   }
+  .fadebanner li:first-child img{display:block; }
   .fadebanner li a{
     font-size: 0;
     width: 12px;
